fixing display on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -111,7 +111,7 @@ body {
   .game {
     display: flex;
     flex-direction: column;
-    margin: 100px 70px;
+    margin: 100px 60px;
     width: 300px;
   }
   .game-info ol {
@@ -119,7 +119,7 @@ body {
     grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
     gap: 20px;
     margin-top: 25px;
-    margin-left: -80px;
+    margin-left: -95px;
   }
   .square {
     width: 90px;
